UI changes to navbar

--- a/lilac-app/src/styles/NavBar.scss
+++ b/lilac-app/src/styles/NavBar.scss
@@ -1,7 +1,25 @@
+#logo {
+  position:absolute;
+  left:150px;
+  height:60px;
+  vertical-align:top;
+  background-color: #004a45;
+  overflow:hidden;
+}
+.logo-item{
+  position: absolute;
+  top: 2px;
+  left:-125px;
+  size: 150%;
+}
+.nav-item {
+  position: relative;
+  right: -175px;
+}
 header {
   display: flex;
   justify-content: center;
-
+  background-color: #004a45;
   nav {
     height: 4rem;
     width: 100%;
@@ -11,7 +29,11 @@ header {
     align-items: stretch;
 
     .nav-item--stretch {
+      position:relative;
+      right:10px;
+      height:65px;
       flex: 1;
+      color: #f0fff5;
     }
 
     a {
@@ -20,7 +42,7 @@ header {
 
       &.nav-item--active {
         font-weight: 500;
-        color: $primary-900;
+        color: #f0fff5;
       }
 
       &:hover {
@@ -33,9 +55,12 @@ header {
     }
 
     a.nav-item--primary, a.nav-item--primary.nax-item--active {
+      position: absolute;
       font-weight: 700;
       color: $primary-900;
-      
+      float: left;
+      align-items:initial;
+      left: 2px;
       svg {
         margin-right: 8px;
       }
